# smart-irrigation-openenv

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
app/: env.py  graders.py  main.py  models.py
server/: app.py
