[project]
name = "smart-irrigation-openenv"
version = "0.1.0"
description = "A real-world irrigation optimization environment built with OpenEnv-compatible APIs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "requests",
    "openenv-core[core]>=0.2.1"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "server*"]
